k8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gwa1
  labels:
    app: gwa1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gwa1
  template:
    metadata:
      labels:
        app: gwa1
    spec:
      containers:
      - name: gwa1
        image: tucandu123/gwa1:latest
        ports:
        - containerPort: 8080
